# ezpz

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  _typos.toml  clippy.toml  justfile
.cargo/: mutants.toml
.github/workflows/: CI.yml  codspeed.yml  test.yml
ezpz/: Cargo.toml
ezpz-cli/: Cargo.toml
ezpz-cli/src/: main.rs  visualize.rs
ezpz-wasm/: Cargo.toml  index.html  main.js
ezpz-wasm/src/: lib.rs
ezpz/src/: analysis.rs  constraint_request.rs  constraints.rs  datatypes.rs  error.rs  lib.rs  residual_viz.rs  solve_outcome.rs  solver.rs  tests.rs  textual.rs  vector.rs  warnings.rs
ezpz/src/datatypes/: inputs.rs  outputs.rs
ezpz/src/solver/: find_dof.rs  newton.rs
ezpz/src/tests/: proptests.rs
ezpz/src/textual/: executor.rs  geometry_variables.rs  instruction.rs  parser.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
kcl-ezpz/: Cargo.toml  README.md
kcl-ezpz/benches/: solver_bench.rs
kcl-ezpz/examples/: basic.rs  parser.rs
kcl-ezpz/proptest-regressions/tests/: proptests.txt
kcl-ezpz/src/: analysis.rs  constraint_request.rs  constraints.rs  datatypes.rs  equations.rs  error.rs  id.rs  lib.rs  optimize.rs  residual_viz.rs  solve_outcome.rs  solver.rs  tests.rs  textual.rs  vector.rs  warnings.rs
kcl-ezpz/src/constraints/: composite.rs
kcl-ezpz/src/datatypes/: inputs.rs
kcl-ezpz/src/solver/: find_dof.rs  newton.rs
kcl-ezpz/src/tests/: proptests.rs
kcl-ezpz/src/textual/: executor.rs  geometry_variables.rs  instruction.rs  parser.rs
newtonls-faer/: Cargo.toml
newtonls-faer/src/: lib.rs  linalg.rs  solver.rs
src/: constraints.rs  lib.rs
test_cases/: angle_parallel.txt
test_cases/angle_parallel/: problem.txt
test_cases/angle_parallel_manual/: problem.txt
test_cases/arc_center_point_coincident/: problem.md
test_cases/arc_line_coincident_bug/: problem.md  problem_without_arc_constraint.md
test_cases/arc_radius/: problem.md  problem.txt
test_cases/circle/: problem.txt
test_cases/circle_center/: problem.txt
test_cases/circle_tangent/: problem.txt
test_cases/massive_parallel_system/: gen_big_problem.py  problem.md  problem.txt
test_cases/parallelogram/: problem.txt
test_cases/perpdist/: problem.md
test_cases/rectangle/: problem.txt
test_cases/symmetric/: problem.md
