[package]
name = "ezpz-wasm"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/KittyCAD/ezpz"
description = "Wasm bindings for the ezpz constraint solver"
license = "MIT"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
faer = "0.22.6"
kcl-ezpz = { path = "../kcl-ezpz" }
wasm-bindgen = "0.2"
