[package]
name = "kcl-ezpz"
version = "0.2.3"
edition = "2024"
description = "A constraint solver for KCL and Zoo Design Studio"
repository = "https://github.com/KittyCAD/ezpz"
license = "MIT"

[features]
fuzz = ["dep:arbitrary"]
dbg-jac = []

[dependencies]
arbitrary = { version = "1.4.2", features = ["derive"], optional = true }
faer = { version = "0.23.2", default-features = false, features = ["std", "sparse-linalg"] }
indexmap = "2.11.0"
libm = "0.2.15"
thiserror = "2.0.14"
winnow = { version = "0.7.13" }

[dev-dependencies]
criterion = "0.8.1"
proptest = "1.9.0"

[[bench]]
name = "solver_bench"
harness = false
